--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "react-hot-toast": "^2.6.0",
     "react-player": "^3.3.3",
     "resend": "^6.1.0",
     "sonner": "^2.0.7",
